fix: list not showing scroll when overflow

--- a/k2-dev/base/src/firebrigade/style.styl
+++ b/k2-dev/base/src/firebrigade/style.styl
@@ -22,7 +22,7 @@
   left 0
   pointer-events none
   margin 8px
-
+  display flex
 
 .topLeftSlot 
   position absolute
@@ -30,7 +30,8 @@
   left: 0
   bottom: 0
   pointer-events all
-
+  display flex
+  flex-flow: column
 
 .topRightSlot 
   position: absolute
@@ -38,6 +39,8 @@
   right: 0
   bottom: 0
   pointer-events: all
+  display flex
+  flex-flow: column
 
 
 .bottomLeftSlot 
@@ -45,6 +48,8 @@
   bottom 0
   left 0
   pointer-events all
+  display flex
+  flex-flow: column
 
 
 .bottomRightSlot 
@@ -52,4 +57,6 @@
   bottom 0
   right 0
   pointer-events all
+  display flex
+  flex-flow: column
 
